lesson-6: add ErrorComponent

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           :img="imgProduct"
           @add-product="addProduct"
         ></products>
+        <error-item></error-item>
       </main>
     </div>
     <script
@@ -43,6 +44,7 @@
     <script src="js/ProductComponent.js"></script>
     <script src="js/CartComponent.js"></script>
     <script src="js/SearchComponent.js"></script>
+    <script src="js/ErrorComponent.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
