lesson-6: corrected ErrorComponent

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           :img="imgProduct"
           @add-product="addProduct"
         ></products>
-        <error-item></error-item>
+        <error-item :error="error"></error-item>
       </main>
     </div>
     <script
